theme/standard/styles_ie6.css
/*
 * These styles are ONLY included for IE 6 (via meta.php)
 */

div#totara_menu {
	height:42px;
}
.tabtree {
  height: 100%;
}

.tabrow0 {
  padding-top: 10px;
}

.tabrow0 li {
  margin-left: 0;
}

.tabrow0 li.first {
  margin-left: -4px;
  margin-right: -4px;
}

.tabrow0 li.last a {
  margin-right: 0;
}

.tabrow0 li.onerow {
  margin-right: 0;
}

.tabrow0 a {
  padding: 0 0 0 13px;
}

.tabrow0 a span {
  padding: 12px 1em 6px 0;
}

.tabrow0 div,
.tabrow0 ul {
  top: 3.5em;
  padding: 0.2em 0;
}


.tabrow0 li a,
.tabrow0 li.active a,
.tabrow0 li.active a:hover,
.tabrow0 li.selected a,
.tabrow0 li.selected a:hover {
  padding-top:0px !important;
  padding-bottom:0px !important;
}
.tabrow0 li {
  margin-right:4px !important;
}
.tabrow0 li a span {
  padding-bottom:4px !important;
}
.tabrow0 li.here a {
  margin-right:2px !important;
}

form.mform input {
  margin-left: expression((this.type=="text"||this.type=="file"||this.type=="password")?'-10px':'0');
}

#admin-user-user_bulk form.mform input,
#admin-user form.mform input {
  margin-left: 0;
}

/* fix for formslib bug introduced by MDL-9745 */
/* using same fix as MDL-12901 */
#newfilter form.mform input {
  margin-left: 0;
}

form.mform textarea {
 margin-left: -10px;
}

.que .info {
  margin-left: 0.6em;
}

#adminsettings .form-setting,
#adminsettings .form-description {
  display:inline-block; padding-left:2px;
}

.drag select {
    visibility: visible;
}

/* course completion */
#course-view li.activity {
	height:1px;
}

/* jquery dialog overlay */
div.totara-dialog ul.treeview li {
	height:16px;
}
/* reports */
.reportbuilder-table .cell {
	height:32px;
}

